<package>
    <name>nasa_common_utilities</name>
    <version>0.0.1</version>
    <description >
        This package contains the components of the nasa_common_utilities package
    </description>
    <maintainer email="allison.thackston@nasa.gov">Allison Thackston</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>envoy</build_depend>
    <build_depend>debsums</build_depend>

    <!-- the package dependency breaks non-Orocos systems -->
    <!--<depend package="log4cpp" />-->

    <!-- the rosdep alternative breaks Orocos systems -->
    <!-- <rosdep name="log4cpp" /> -->

    <!-- use r2_cmake/FindLog4cpp.cmake as a work-around -->

    <!-- <depend package="hayai" /> -->
    
</package>

