<?xml version="1.0"?>
<package>
    <name>nasa_common_utilities</name>
    <version>1.1.0</version>
    <description >
        This package contains the components of the nasa_common_utilities package
    </description>

    <maintainer email="allison.thackston@nasa.gov">Allison Thackston</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roslib</build_depend>
    <build_depend>boost</build_depend>
    <build_depend>nasa_cmake</build_depend>
    <build_depend>log4cpp</build_depend>
    <build_depend>hayai</build_depend>

    <run_depend>roslib</run_depend>
    <run_depend>boost</run_depend>
    <run_depend>log4cpp</run_depend>
    <run_depend>hayai</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>envoy</run_depend>
    <run_depend>debsums</run_depend>
    
</package>

